Change margin on logo so the etch a sketch no longer overflows the screen

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 .logo{
     text-align: center;
     font-family: 'DancingScript';
-    margin-top:50px;
+    margin-top:40px;
     font-size:57px;
     font-weight: 300;
     color: gold;
